--- a/pages/base.html
+++ b/pages/base.html
@@ -48,11 +48,8 @@
     <main class="container-xl py-5">
         <h2 class="text-center my-5">Sobre nosotros</h2>
 
-
-
-
     </main>
-    
+    <!-- FIN CONTENIDO PRINCIPAL -->
 
     <!-- INICIO FOOTER -->
     <footer class="pt-5 mt-5 border-top">
