--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,12 +103,8 @@
                 <input class="btn btn-primary fs-2 d-block mt-5 w-100" type="submit" value="Enviar Formulario">
           </form>
         </div>
-
-
-
-
     </main>
-    
+    <!-- FIN CONTENIDO PRINCIPAL -->
 
     <!-- INICIO FOOTER -->
     <footer class="pt-5 mt-5 border-top">
