--- a/pages/entrada.html
+++ b/pages/entrada.html
@@ -62,23 +62,16 @@
                         <span class="text-primary">Tienda muebles</span>
                     </p>
                 </div>
-
                 <p>
                     Además de consejos de decoración, nuestro blog también presenta nuestras últimas ofertas y novedades en productos. Ya sea que estés buscando una nueva mesa de comedor, un sofá cómodo o una cama acogedora, nuestra selección de muebles de alta calidad y a precios accesibles seguramente te impresionará. Y si tienes preguntas o necesitas ayuda para elegir los muebles perfectos para tu hogar, nuestro equipo de atención al cliente está listo para ayudarte. Entra en nuestro sitio web para leer nuestro blog y descubrir nuestra amplia selección de muebles para el hogar.
                 </p>
                 <p>
                     Además de nuestros productos, en nuestro blog también hablamos sobre tendencias en decoración, estilos de muebles y cómo combinarlos para crear un ambiente único y acogedor en tu hogar. Si estás buscando inspiración para tu próxima renovación o simplemente quieres mantenerse al día con las últimas tendencias en diseño de interiores, nuestro blog es el lugar perfecto para encontrar ideas frescas y creativas. Y con nuestro amplio inventario de muebles y accesorios, estamos seguros de que encontrarás todo lo que necesitas para transformar tu hogar en un espacio hermoso y funcional.
-                </p>
-                
+                </p>           
             </article>
-
         </div>
-
-
-
-
     </main>
-    
+    <!-- FIN CONTENIDO PRINCIPAL -->
 
     <!-- INICIO FOOTER -->
     <footer class="pt-5 mt-5 border-top">
