--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    
+    <!-- FIN CONTENIDO PRINCIPAL -->
 
     <!-- INICIO FOOTER -->
     <footer class="pt-5 mt-5 border-top">
