--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,6 +61,8 @@
             </div>
         </div>
     </main>
+    <!-- FIN CONTENIDO PRINCIPAL -->
+    
     <!-- INICIO FOOTER -->
     <footer class="pt-5 mt-5 border-top">
         <div class="container-xl mt-5">
