--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -135,7 +135,7 @@
             </div>
         </div>       
     </main>
-    
+    <!-- FIN CONTENIDO PRINCIPAL -->
 
     <!-- INICIO FOOTER -->
     <footer class="pt-5 mt-5 border-top">
