--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -72,7 +72,7 @@
                     <div class="card-body text-center bg-primary text-white p-5">
                         <h3>Producto 2</h3>
                         <p>
-                            Hecho con espuma de alta densidad y tapizado en tela suave al tacto, este sofá es la combinación perfecta de estilo y confort.
+                            Hecho con espuma de alta densidad y tapizado en tela suave al tacto, este sofá es la combinación perfecta de estilo y confort, con acabados de primera calidad.
                         </p>
                         <p class="fw-bold fs-1">$2.400.000</p>
                         <a href="#" class="precio btn btn-success fs-3 fw-bold py-3 text-uppercase d-block">agregar al carrito</a>
@@ -101,7 +101,7 @@
                     <div class="card-body text-center bg-primary text-white p-5">
                         <h3>Producto 4</h3>
                         <p>
-                            Nuestra mesa pequeña es la solución perfecta para ahorrar espacio. Hecha con materiales de alta calidad, esta mesa es duradera y resistente. 
+                            Nuestra mesa pequeña es la solución perfecta para ahorrar espacio. Hecha con materiales de alta calidad, esta mesa es duradera y resistente, con diseño compacto y elegante.
                         </p>
                         <p class="fw-bold fs-1">$400.000</p>
                         <a href="#" class="precio btn btn-success fs-3 fw-bold py-3 text-uppercase d-block">agregar al carrito</a>
