--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="../build/css/style.css">  
+    <link rel="stylesheet" href="../build/css/meeti.css">  
     
 </head>
 
@@ -70,7 +70,7 @@
                     </p>
 
                     <a href="entrada.html" class="btn btn-success btn fs-3 px-5 py-3 fw-bold 
-                    text-uppercase d-block d-md-inline-block">Seguir leyendo</a>
+                    text-uppercase d-block d-md-inline-block text-white">Seguir leyendo</a>
                 </article>         
             </section>
             <aside class="col-md-4">
