--- a/pages/entrada.html
+++ b/pages/entrada.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="../build/css/style.css"> 
+    <link rel="stylesheet" href="../build/css/meeti.css"> 
     
 </head>
 
