--- a/pages/entrada.html
+++ b/pages/entrada.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce - Entrada de blog</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="../build/css/meeti.css"> 
-    
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ecommerce - Entrada blog</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="../build/css/meeti.css">
+        <meta name="description" content="Encuentra la mejor selección de muebles para tu hogar en nuestra tienda en línea. Tenemos una amplia variedad de muebles de alta calidad, desde sofás cómodos y elegantes hasta mesas y sillas para el comedor y la cocina. Además, ofrecemos opciones de envío y entrega rápida para que puedas disfrutar de tus muebles nuevos en poco tiempo. ¡Explora nuestro catálogo en línea ahora y haz que tu hogar luzca espectacular con nuestros hermosos muebles!">
+        <meta name="keywords"  content="Muebles, Mejores, Muebles, Calidad, Tienda, Bogotá, Seleccion, Calidad, Catalogo en linea">      
+    </head>
 
 <body>
     <!-- INICIO HEADER -->
