--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce - Nosotros</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="../build/css/meeti.css">  
-    
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ecommerce - Nosotros</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="../build/css/meeti.css">
+        <meta name="description" content="Encuentra la mejor selección de muebles para tu hogar en nuestra tienda en línea. Tenemos una amplia variedad de muebles de alta calidad, desde sofás cómodos y elegantes hasta mesas y sillas para el comedor y la cocina. Además, ofrecemos opciones de envío y entrega rápida para que puedas disfrutar de tus muebles nuevos en poco tiempo. ¡Explora nuestro catálogo en línea ahora y haz que tu hogar luzca espectacular con nuestros hermosos muebles!">
+        <meta name="keywords"  content="Muebles, Mejores, Muebles, Calidad, Tienda, Bogotá, Seleccion, Calidad, Catalogo en linea">      
+    </head>
 
 <body>
     <!-- INICIO HEADER -->
@@ -35,11 +36,11 @@
             <div id="navegacion" class="collapse navbar-collapse">
                 <nav class="navbar-nav container d-flex flex-md-row justify-content-md-between">
                     <a class="text-dark text-decoration-none" href="nosotros.html">Nosotros</a>
-                    <a class="text-dark text-decoration-none" href=tienda.htmll">Tienda</a>
+                    <a class="text-dark text-decoration-none" href="tienda.html">Tienda</a>
                     <a class="text-dark text-decoration-none" href="../index.html">Inicio</a>
-                    <a class="text-dark text-decoration-none" href=blog.html">Blog</a>
-                    <a class="text-dark text-decoration-none" href=galeria.html">Galeria</a>
-                    <a class="text-dark text-decoration-none" href=contacto.html">Contacto</a>
+                    <a class="text-dark text-decoration-none" href="blog.html">Blog</a>
+                    <a class="text-dark text-decoration-none" href="galeria.html">Galeria</a>
+                    <a class="text-dark text-decoration-none" href="contacto.html">Contacto</a>
                 </nav>
             </div>
         </div>
